# Pangui

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/framework/: mod.rs
src/framework/options/: mod.rs
src/framework/options/commands/: mod.rs
src/framework/options/commands/horario/: mod.rs  revisar_curso.rs  revisar_nombre.rs  revisar_nrc.rs  revisar_profesor.rs  revisar_sigla.rs
src/framework/options/commands/info/: info.rs  mod.rs
src/framework/options/commands/spotify/: artista.rs  mod.rs  spotify_artista.rs  spotify_lp.rs
src/framework/options/event_handler/: mod.rs  ready.rs
src/utils/components/: mod.rs  responses.rs
src/utils/components/spotify_commands/: mod.rs  spotify_artists.rs  spotify_lps.rs
